# brainfuck-rs

./: Cargo.toml  LICENSE  README.md  bf-wasm-1e9b65543dafebdd.js  bf-wasm-1e9b65543dafebdd_bg.wasm  bf-wasm-d0f57536af455bb.js  bf-wasm-d0f57536af455bb_bg.wasm  index.html  tailwind-b564bc4eef9f1e52.css
.github/workflows/: cd.yml
bf-wasm/: Cargo.toml  index.html  package-lock.json
bf-wasm/src/: main.rs
bf-wasm/src/components/: navbar.rs
bf-wasm/src/pages/: index.rs  notfound.rs
src/: arg.rs  lib.rs  main.rs
